--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rbcp3-urlsafe-crypto",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "urlsafe aes-256-cbc encrypt/decrypt a string/object",
   "private": true,
   "main": "dist/index.js",
@@ -42,17 +42,17 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-add-jsdoc-properties": "^0.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "deep-freeze": "0.0.1",
-    "eslint": "^4.6.1",
-    "jsdoc": "^3.5.4",
-    "mocha": "^3.5.3",
+    "eslint": "^4.9.0",
+    "jsdoc": "^3.5.5",
+    "jsdoc-babel": "^0.3.0",
+    "mocha": "^4.0.1",
     "npm-run-all": "^4.1.1",
     "onchange": "^3.2.1",
-    "should": "^13.0.1",
+    "should": "^13.1.2",
     "should-sinon": "0.0.6",
-    "sinon": "^3.2.1",
-    "jsdoc-babel": "^0.3.0"
+    "sinon": "^4.0.1"
   },
   "dependencies": {}
 }
