chore(package.json): updated deps

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,7 +1,17 @@
 {
-  "beforeChangelogCommand": "conventional-changelog -i CHANGELOG.md -s -r 0",
-  "buildCommand": "npm-run-all build test",
-  "changelogCommand": "npx conventional-changelog -u | tail -n +3",
+  "scripts": {
+    "afterBump": "conventional-changelog -i CHANGELOG.md -s -r 0",
+    "beforeStage": "npm-run-all build test",
+    "beforeStart": "npm run build",
+    "changelog": "npx conventional-changelog -u | tail -n +3"
+  },
+  "git": {
+    "commitMessage": "chore: release v%s",
+    "requireCleanWorkingDir": false,
+    "requireUpstream": true,
+    "tagAnnotation": "release %s",
+    "tagName": "v%s"
+  },
   "github": {
     "release": false
   },
@@ -14,14 +24,5 @@
   "pkgFiles": [
     "package.json",
     "package-lock.json"
-  ],
-  "requireCleanWorkingDir": false,
-  "requireUpstream": true,
-  "safeBump": false,
-  "src": {
-    "beforeStartCommand": "npm run build",
-    "commitMessage": "chore: release v%s",
-    "tagAnnotation": "release %s",
-    "tagName": "v%s"
-  }
+  ]
 }
