--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,18 @@
 {
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"],
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "targets": {
           "node": "current"
         }
       }
     ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [ "istanbul" ]
+    }
+  }
 }
