--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
   "name": "@freshfx/urlsafe-crypto",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "urlsafe aes-256-cbc encrypt/decrypt a string/object",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm-run-all clean docs scripts",
+    "build:clean": "rm -rf dist",
+    "build": "npm-run-all build:clean docs scripts",
+    "build:release": "npm-run-all build:clean docs scripts:release",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -r 0",
-    "clean": "rm -rf dist",
-    "docs": "jsdoc2md src/index.js > README.md",
-    "docs:watch": "onchange -k -t 500 'src/**/*.js' -v -- npm run docs",
-    "lint": "eslint -c .eslintrc.yml src/ test/",
-    "lint:watch": "onchange -k -t 200 'src/**/*.js' 'test/**/*.js' -v -- npm run lint",
-    "prepublish": "npm-run-all clean lint build test",
-    "test": "NODE_ENV=test mocha",
-    "release": "npx release-it",
-    "scripts": "babel src/ -d dist/ --copy-files",
+    "clean": "npm run build:clean",
+    "commit": "npx git-cz",
+    "coverage": "nyc check-coverage",
+    "docs:watch": "onchange -k -d 500 'src/**/*.js' 'template.hbs' -v -- npm run docs",
+    "docs": "jsdoc2md -t template.hbs src/*.js > README.md",
+    "lint:watch": "onchange -k -d 200 'src/**/*.js' 'test/**/*.js' -v -- npm run lint",
+    "lint": "eslint --color --cache -c .eslintrc.yml src/ test/",
+    "lint:staged": "lint-staged",
+    "precommit": "npm run lint",
+    "prepublishOnly": "cd ../src npm-run-all clean lint build test",
+    "prestart": "npm run clean && mkdir dist",
+    "release": "release-it",
+    "scripts:watch:delete": "onchange -k -d 200 \"src/**/*.*\" -- scripts/remove-on-unlink '{{event}} {{changed}}'",
     "scripts:watch": "babel src/ --watch -d dist/ -s true --copy-files",
-    "scripts:watch:delete": "onchange -k -t 200 \"src/**/*.*\" -- scripts/remove-on-unlink '{{event}} {{changed}}'",
-    "prestart": "npm-run-all clean lint build test",
+    "scripts:release": "babel src/ -d dist/ -s false --copy-files",
+    "scripts": "babel src/ -d dist/ --copy-files",
     "start": "npm run watch",
-    "test:watch": "onchange -k -t 200 'dist/**/*.js' 'test/**/*.js' -- npm run test",
+    "test:watch": "onchange -k -d 200 'dist/**/*.js' 'test/**/*.js' -- npm run test",
+    "test": "FORCE_COLOR=1 NODE_ENV=test nyc mocha",
     "watch": "npm-run-all --parallel docs:watch scripts:watch lint:watch test:watch scripts:watch:delete"
+  },
+  "lint-staged": {
+    "(src|test)/**/*.js": "eslint --ignore-path .gitignore --color -c .eslintrc.yml --cache"
   },
   "repository": {
     "type": "git",
@@ -33,32 +43,58 @@
   "keywords": [
     "crypto"
   ],
+  "pre-commit": "lint:staged",
+  "pre-push": [
+    "test"
+  ],
   "author": "Michael Poschacher <poschi@freshfx.at>",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/freshfx/rbcp3-urlsafe-crypto/issues"
   },
   "homepage": "https://github.com/freshfx/rbcp3-urlsafe-crypto#readme",
-  "files": [
-    "dist"
-  ],
   "devDependencies": {
-    "@release-it/conventional-changelog": "^1.1.0",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-add-jsdoc-properties": "^0.1.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "deep-freeze": "0.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-import": "^2.17.3",
-    "jsdoc-to-markdown": "^5.0.0",
-    "mocha": "^6.1.4",
-    "npm-run-all": "^4.1.5",
-    "onchange": "^6.0.0",
-    "release-it": "^12.2.2",
-    "should": "^13.2.3",
+    "@babel/cli": "7.14.8",
+    "@babel/core": "7.14.8",
+    "@babel/plugin-proposal-object-rest-spread": "7.14.7",
+    "@babel/preset-env": "7.14.8",
+    "@babel/register": "7.14.5",
+    "@release-it/conventional-changelog": "^3.0.1",
+    "babel-plugin-istanbul": "6.0.0",
+    "conventional-changelog": "3.1.24",
+    "conventional-changelog-cli": "2.1.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.31.0",
+    "eslint-plugin-import": "2.23.4",
+    "jsdoc-to-markdown": "7.0.1",
+    "lint-staged": "^11.1.1",
+    "mocha": "9.0.3",
+    "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
+    "onchange": "7.1.0",
+    "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1",
+    "release-it": "14.10.1",
+    "should": "13.2.3",
     "should-sinon": "0.0.6",
-    "sinon": "^7.3.2"
+    "sinon": "11.1.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "lines": 95,
+    "statements": 95,
+    "functions": 95,
+    "branches": 95
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "publishConfig": {
+    "access": "private"
+  }
 }
