--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "pre-push": [
     "test"
   ],
-  "author": "Michael Poschacher <poschi@freshfx.at>",
+  "author": "Stefan Laimer <stefan.laimer@freshfx.at>",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/freshfx/rbcp3-urlsafe-crypto/issues"
@@ -55,30 +55,30 @@
   "homepage": "https://github.com/freshfx/rbcp3-urlsafe-crypto#readme",
   "devDependencies": {
     "deep-freeze": "0.0.1",
-    "@babel/cli": "7.15.7",
-    "@babel/core": "7.15.8",
-    "@babel/plugin-proposal-object-rest-spread": "7.15.6",
-    "@babel/preset-env": "7.15.8",
-    "@babel/register": "7.15.3",
-    "@release-it/conventional-changelog": "^3.3.0",
+    "@babel/cli": "7.19.3",
+    "@babel/core": "7.19.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.19.4",
+    "@babel/preset-env": "7.19.4",
+    "@babel/register": "7.18.9",
+    "@release-it/conventional-changelog": "^5.1.1",
     "babel-plugin-istanbul": "6.1.1",
-    "conventional-changelog": "3.1.24",
-    "conventional-changelog-cli": "2.1.1",
+    "conventional-changelog": "3.1.25",
+    "conventional-changelog-cli": "2.2.2",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.0.1",
-    "eslint-plugin-import": "2.25.2",
-    "jsdoc-to-markdown": "7.1.0",
-    "lint-staged": "^11.2.3",
-    "mocha": "9.1.3",
+    "eslint": "8.25.0",
+    "eslint-plugin-import": "2.26.0",
+    "jsdoc-to-markdown": "7.1.1",
+    "lint-staged": "^13.0.3",
+    "mocha": "10.0.0",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "onchange": "7.1.0",
     "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1",
-    "release-it": "14.11.6",
+    "pre-push": "^0.1.4",
+    "release-it": "15.5.0",
     "should": "13.2.3",
     "should-sinon": "0.0.6",
-    "sinon": "11.1.2"
+    "sinon": "14.0.1"
   },
   "dependencies": {},
   "nyc": {
